--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to Giphy World!</h1>
     <!-- extra points for external javascript file -->
     <script type="text/javascript">
-        
+        // giphy api key link: https://giphy.api-docs.io/1.0/welcome/access-and-api-keys
     </script>
 </body>
 </html>
