created an assets folder

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <title>Giphy Generator</title>
+
 </head>
-<body>
-    <h1>Welcome to Giphy World!</h1>
-    <!-- extra points for external javascript file -->
-    <script type="text/javascript">
-        // giphy api key link: https://giphy.api-docs.io/1.0/welcome/access-and-api-keys
-    </script>
-</body>
+    <body>
+        
+        <h1>Welcome to Giphy World!</h1>
+    
+        <script src="./assets/script.js"> </script>
+
+    </body>
 </html>
