creating buttons for callbacks

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <body>
         
         <h1>Welcome to Giphy World!</h1>
+
+        <button id="cat-button">Cats</button>
+        <button id="bird-button">Birds</button>
+        <button id="dog-button">Dogs</button>
+
+        <div id="images"></div>
     
         <script src="./assets/script.js"> </script>
 
