--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         
         <h1>Welcome to Giphy World!</h1>
 
-        <button id="cat-button">Cats</button>
-        <button id="bird-button">Birds</button>
-        <button id="dog-button">Dogs</button>
+        <button id="animal-button">Cats</button>
+        <button id="animal-button">Birds</button>
+        <button id="animal-button">Dogs</button>
 
-        <div id="images"></div>
+        <div id="gifs-appear-here">
     
         <script src="./assets/script.js"> </script>
 
