starting to understand the process of api and calling them

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         
         <h1>Welcome to Giphy World!</h1>
 
-        <button id="animal-button">Cats</button>
-        <button id="animal-button">Birds</button>
-        <button id="animal-button">Dogs</button>
+        <button id="cat-button">Cats</button>
+        <button id="bird-button">Birds</button>
+        <button id="dog-button">Dogs</button>
 
         <div id="gifs-appear-here">
     
