created a second javascript file to try another method out

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         <h1>Welcome to Giphy World!</h1>
 
         <button id="catButton">Cat Button</button>
-        <button id="dogButton">Dog Button</button>
-        <button id="birdButton">Bird Button</button>
+        <!-- <button id="dogButton">Dog Button</button>
+        <button id="birdButton">Bird Button</button> -->
 
         <div id="gifs-here"></div>
     
-        <script src="./assets/script.js"> </script>
+        <!-- <script src="./assets/script.js"> </script> -->
+        <script src="./assets/script-two.js"> </script>
+
 
     </body>
 </html>
