the script-three activates the buttons and appends them to the html page. Now I need to get 10 to append for each button click

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         
         <h1>Welcome to Giphy World!</h1>
 
+        <button data-animal="cat">Cat Button</button>
+        <button data-animal="dog">Dog Button</button>
+        <button data-animal="bird">Bird Button</button>
+
         <!-- <button id="catButton">Cat Button</button> -->
         <!-- <button id="dogButton">Dog Button</button>
         <button id="birdButton">Bird Button</button> -->
@@ -23,7 +27,7 @@
     
         <!-- <script src="./assets/script.js"> </script> -->
         <!-- <script src="./assets/script-two.js"> </script> -->
-        <script src="./assets/script-three.js.js"> </script>
+        <script src="./assets/script-three.js"> </script>
 
 
 
