working on the rest of the homework instructions with adding still images

--- a/index.html
+++ b/index.html
@@ -8,28 +8,22 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <title>Giphy Generator</title>
+    <title>Giphy Animal Generator</title>
 
 </head>
     <body>
-        
-        <h1>Welcome to Giphy World!</h1>
 
-        <button data-animal="cat">Cat Button</button>
-        <button data-animal="dog">Dog Button</button>
-        <button data-animal="bird">Bird Button</button>
+        <div class="container">
+            <h1>Welcome to Giphy Animals!</h1>
 
-        <!-- <button id="catButton">Cat Button</button> -->
-        <!-- <button id="dogButton">Dog Button</button>
-        <button id="birdButton">Bird Button</button> -->
+            <button data-animal="cat">Cat Button</button>
+            <button data-animal="dog">Dog Button</button>
+            <button data-animal="bird">Bird Button</button>
 
-        <div id="gifs-here"></div>
+            <div id="gifs-here"></div>
+        </div>
     
-        <!-- <script src="./assets/script.js"> </script> -->
-        <!-- <script src="./assets/script-two.js"> </script> -->
         <script src="./assets/script-three.js"> </script>
-
-
 
     </body>
 </html>
